[package]
name = "bf-jit"
authors = ["Qirui Wang <mr.qrwang@gmail.com>"]
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced-x86 = {version = "1.21", features = ["code_asm"]}
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
libc = "0.2"